--- a/templates/index.html
+++ b/templates/index.html
@@ -47,14 +47,13 @@
     </div>
     <div class="input-area">
       <div id="quick-replies" class="mb-2">
-        <button class="btn btn-outline-secondary me-2" onclick="sendQuickReply('Offers')">Offers</button>
-        <button class="btn btn-outline-secondary me-2" onclick="sendQuickReply('Data Offers')">Data Offers</button>
-        <button class="btn btn-outline-secondary me-2" onclick="sendQuickReply('Packages')">Packages</button>
-        <button class="btn btn-outline-secondary me-2" onclick="sendQuickReply('B2C')">B2C</button>
-        <button class="btn btn-outline-secondary me-2" onclick="sendQuickReply('Digital')">Digital</button>
-        <button class="btn btn-outline-secondary me-2" onclick="sendQuickReply('Jazz Rox')">Jazz Rox</button>
-        <button class="btn btn-outline-secondary me-2" onclick="sendQuickReply('Support')">Support</button>
-        
+        <button class="btn btn-outline-secondary me-2" onclick="sendQuickReply('I want to see few Offers')">Offers</button>
+        <button class="btn btn-outline-secondary me-2" onclick="sendQuickReply('I want to see few Data Offers')">Data Offers</button>
+        <button class="btn btn-outline-secondary me-2" onclick="sendQuickReply('I want to see some Packages')">Packages</button>
+        <button class="btn btn-outline-secondary me-2" onclick="sendQuickReply('Do you have offers in B2C?')">B2C</button>
+        <button class="btn btn-outline-secondary me-2" onclick="sendQuickReply('Do we have any offers in Jazz Digital')">Digital</button>
+        <button class="btn btn-outline-secondary me-2" onclick="sendQuickReply('What is Jazz Rox')">Jazz Rox</button>
+        <button class="btn btn-outline-secondary me-2" onclick="sendQuickReply('I want Support')">Support</button>        
       </div>
       <div class="input-group mt-3">          
         <input type="text" id="user-input" class="form-control" placeholder="Type your message...">
