--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,12 @@
 <body>
   <div class="container mt-4">
     <h3>KMS Jazz Support Bot</h3>
+    <div class="language-selector mb-2">
+      <select id="language-select" class="form-select" style="width: auto; display: inline-block;">
+        <option value="english" selected>English</option>
+        <option value="roman-urdu">Roman Urdu</option>
+      </select>
+    </div>
     <div class="chat-box border p-3 rounded" id="chat-box"></div>
     <div class="robot-area" id="robotArea">
       <span class="robot-text robot-jazz">Jazz</span>
